correct some typos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a class="nav-link active" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+                    <a class="nav-link" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="participer.html">Participer</a>
@@ -35,8 +35,8 @@
     <div id="content">
         <section id="why">
             <div class="container">
-                <h1>Pourquoi ?</h1>
-                <p class="intro">Il existe des milliers de sites Web, dictionnaires et bibliothèques en ligne, dédiés aux langues des signes. Pourquoi vouloir recommencer ?</p>
+                <h1>Pourquoi ?</h1>
+                <p class="intro">Il existe des milliers de sites Web, dictionnaires et bibliothèques en ligne, dédiés aux langues des signes. Pourquoi vouloir recommencer ?</p>
 
                 <div class="row">
 
@@ -45,7 +45,7 @@
                             <i class="fa fa-creative-commons"></i>
                         </div>
                         <h2 class="text-center">License libre</h2>
-                        <p>Les licences d'utilisation des contenus disponibles ne sont pas toujours ouvertes (copyright, utilisation impossible hors site, ...).</p>
+                        <p>Les licences d'utilisation des contenus disponibles ne sont pas toujours ouvertes (copyright, utilisation impossible hors site, …).</p>
                         <p>Il est donc très difficile de s'approprier les contenus, et surtout de les améliorer ou de contribuer.</p>
                         <p>Nous souhaitons construire une bibliothèque de signes qui soit dans le domaine public (Creative Commons CC-0).</p>
                     </div>
@@ -56,7 +56,7 @@
                         </div>
                         <h2 class="text-center">Universelle</h2>
                         <p>La bibliothèque sera internationale. Chaque lettre, chiffre ou mot pourra être décliné dans différentes langues, selon les envies des contributeurs. Pour commencer, nous nous focaliserons probablement sur la langue des signes française.</p>
-                        <p>Contrairement aux photos, les illustrations produites ne seront pas obligatoirement à l'image des contributeurs. Elles feront preuve de diversité (enfants, femmes, hommes, multiethnique ...) et le plus schématique possible (visages, bustes, vêtements...).</p>
+                        <p>Contrairement aux photos, les illustrations produites ne seront pas obligatoirement à l'image des contributeurs. Elles feront preuve de diversité (enfants, femmes, hommes, multiethnique…) et le plus schématique possible (visages, bustes, vêtements…).</p>
                     </div>
 
                     <div class="col-md-4">
@@ -65,7 +65,7 @@
                         </div>
                         <h2 class="text-center">Collaborative</h2>
                         <p>Chaque visuel pourra être recherché par mot clé et téléchargé par langue sur une page Web minimaliste.</p>
-                        <p>Tout le monde pourra s'approprier, corriger, améliorer et ajouter des signes. La bibliothèque sera donc construite avec l'aide de contributeurs bénévoles. Nous encadrerons le projet avec la même philosophie que les logiciels libres!</p>
+                        <p>Tout le monde pourra s'approprier, corriger, améliorer et ajouter des signes. La bibliothèque sera donc construite avec l'aide de contributeurs bénévoles. Nous encadrerons le projet avec la même philosophie que les logiciels libres !</p>
                         <p>La licence libre permettra aussi de publier le contenu de la bibliothèque sur plusieurs plateformes existantes (ex. <a href="https://thenounproject.com/term/sign-language/" title="thenounproject">thenounproject</a>, <a href="https://openclipart.org/search/?query=sign+language" title="openclipart">openclipart</a>).</p>
                     </div>
 
@@ -75,7 +75,7 @@
                         </div>
                         <h2 class="text-center">Vectorielle</h2>
                         <p>Les formats des contenus disponibles sont variés, mais la plupart sont des vidéos, photos animées, ou dessins numérisés, ce qui limite les usages. Notamment à cause de la présence d'un fond obscur, ou d'un manque de résolution ou de netteté.</p>
-                        <p>Le format vectoriel présente de nombreux avantages:</p>
+                        <p>Le format vectoriel présente de nombreux avantages :</p>
                         <div class="row">
                             <div class="col-md-6">
                                 <ul>
@@ -89,7 +89,7 @@
                                         <strong>Déclinable</strong> (appropriation du contenu facilitée — couleurs, proportions, …)
                                     </li>
                                     <li>
-                                        <strong>Multi-supports</strong> (impression papier, sites Web, applications, ...)
+                                        <strong>Multi-supports</strong> (impression papier, sites Web, applications, …)
                                     </li>
                                     <li>
                                         <strong>Neutre et anonyme</strong> (celui ou celle qui contribue n'expose pas son visage)
@@ -112,8 +112,8 @@
         </section>
         <section id="for-who">
             <div class="container">
-                <h1>Pour Qui ?</h1>
-                <p class="intro">Le format, la license d'utilisation et le côté schématique des signes ouvre énormément de possibilités quand aux usages.</p>
+                <h1>Pour Qui ?</h1>
+                <p class="intro">Le format, la licence d'utilisation et le côté schématique des signes ouvre énormément de possibilités quant aux usages.</p>
                 <img class="centered" src="images/multimedia.png" alt="Illustration du multi-support">
                 <p class="intro">Nous avons cependant déjà identifiés ces besoins concrets, auprès d'acteurs et d'associations du monde des sourds
                 </p>
@@ -147,7 +147,7 @@
                         <div class="card text-center">
                             <div class="card-block">
                             <h4 class="card-title">Jeux numériques</h4>
-                            <p class="card-text">Activité dans le jeu éducatif open source <strong>GCompris</strong> (chiffres, lettres, mots...)</p>
+                            <p class="card-text">Activité dans le jeu éducatif open source <strong>GCompris</strong> (chiffres, lettres, mots…)</p>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                         <div class="card text-center">
                             <div class="card-block">
                             <h4 class="card-title">Mémos</h4>
-                            <p class="card-text"><strong>Mémos</strong>, permettant aux interprêtes de pouvoir noter un signe pour ne pas l'oublier</p>
+                            <p class="card-text"><strong>Mémos</strong>, permettant aux interprètes de pouvoir noter un signe pour ne pas l'oublier</p>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
         </section>
         <section id="how">
             <div class="container">
-                <h1>Comment ?</h1>
+                <h1>Comment ?</h1>
                 <div class="intro">
                     <p>Évidemment, nous sommes conscients de la quantité de travail à fournir pour construire une bibliothèque avec des milliers de mots.</p>
                     <p>C'est pourquoi nous souhaitons nous appuyer sur une série d'éléments réutilisables pour accélérer la création des signes.</p>
@@ -194,9 +194,9 @@
                         </div>
                         <div class="col-md-6">
                             <p>Les différents éléments réutilisables seront regroupés dans des fichiers, indépendamment des langues.</p>
-                            <p>Pour créer un nouveau mot, un simple copier-coller des éléments suffira pour démarrer !</p>
+                            <p>Pour créer un nouveau mot, un simple copier-coller des éléments suffira pour démarrer !</p>
                             <p>Avec quelques dizaines d'éléments, il est possible de commencer à décrire un vocabulaire, le logiciel de dessin permettant de tourner, inverser ou étirer.</p>
-                            <p>À terme, nous estimons qu'il faudra une centaine de «mains» pour permettre de contribuer des nouveaux mots sans devoir retoucher les éléments.</p>
+                            <p>À terme, nous estimons qu'il faudra une centaine de « mains » pour permettre de contribuer des nouveaux mots sans devoir retoucher les éléments.</p>
                             <p>Cette approche permet également de garantir un minimum d'homogénéité graphique au sein de la bibliothèque.</p>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
 
                 <div class="container">
                     <h2>Représenter le mouvement</h2>
-                    <p>Le logiciel de dessin permet de controler l'aspect des contours des objets (pointillés, opacité, etc.), ce qui permet de représenter le mouvement de manière universelle, à la manière des bandes dessinées.</p>
+                    <p>Le logiciel de dessin permet de contrôler l'aspect des contours des objets (pointillés, opacité, etc.), ce qui permet de représenter le mouvement de manière universelle, à la manière des bandes dessinées.</p>
                     <div class="row">
                         <div class="col-md-6">
                             <img src="images/movement.png" alt ="Représentation du mouvement avec des flèches">
@@ -219,9 +219,9 @@
 
                 <div class="container">
                     <h2>Plateforme collaborative</h2>
-                    <p>Nous souhaitons commencer avec une plateforme comme <a href="https://fr.wikipedia.org/wiki/GitHub" title="Github wikipedia page">Github</a>, pour construire et enrichir la bibliothèque à plusieurs.</p>
+                    <p>Nous souhaitons commencer avec une plateforme comme <a href="https://fr.wikipedia.org/wiki/GitHub" title="Github Wikipedia page">Github</a>, pour construire et enrichir la bibliothèque à plusieurs.</p>
                     <p>Dans un premier temps, les fichiers seront téléchargés, édités sur le poste de travail avec un logiciel comme <a href="https://inkscape.org/" title="Inskscape website">Inkscape</a>, et les résultats renvoyés sur la plateforme. Nous mettrons à profit notre expérience dans le monde des logiciels libres pour animer et gérer les contributions.</p>
-                    <p>À terme, nous pourrons envisager d'avoir une application Web, avec un véritable éditeur en ligne (comme les pour les <a href="http://faceyourmanga.com/" title="Face Your Manga website">avatars mangas</a>...)</p>
+                    <p>À terme, nous pourrons envisager d'avoir une application Web, avec un véritable éditeur en ligne (comme les pour les <a href="http://faceyourmanga.com/" title="Face Your Manga website">avatars mangas</a>…)</p>
                 </div>
             </div>
         </section>
