--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>LSF Libre - Qui sommes-nous ?</title>
+    <title>LSF Libre - Qui sommes-nous ?</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+                    <a class="nav-link active" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="participer.html">Participer</a>
@@ -35,8 +35,8 @@
     <div id="content">
         <section id="who-are-we">
             <div class="container">
-                <h1>Qui sommes-nous ?</h1>
-                <p class="intro">Nous sommes une équipe de gens motivés ayant pour envie commune le partage et l'accessibilité !</p>
+                <h1>Qui sommes-nous ?</h1>
+                <p class="intro">Nous sommes une équipe de gens motivés ayant pour envie commune le partage et l'accessibilité !</p>
 
                 <div class="card-columns">
                     <div class="card">
@@ -46,7 +46,7 @@
                             <p class="card-text">Sourdéveloppeur d’une plateforme collaborative noétomalalienne</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">President de l'association <a href="http://www.arboresign.fr/" title="http://www.arboresign.fr/">Arbore'Sign</a></li>
+                            <li class="list-group-item">Président de l'association <a href="http://www.arboresign.fr/" title="http://www.arboresign.fr/">Arbore'Sign</a></li>
                             <li class="list-group-item">Conseiller technique en accessibilité universelle de l'association <a href="http://www.liberte0.org/" title="http://www.liberte0.org/">Liberté0</a></li>
                             <li class="list-group-item">Cinéplasticien numérique de l'association <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
                             <li class="list-group-item">Référent pédagogique LSF de l'association <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Midi-Pyrénées</a> à Ramonville</li>
