--- a/ressources.html
+++ b/ressources.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+                    <a class="nav-link" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="participer.html">Participer</a>
@@ -37,22 +37,22 @@
             <div class="container">
                 <h1>Ressources</h1>
                 <div class="intro">
-                    <p>Voici une liste non exhaustive de ressources sur lesquels nos recherchent s'appuient</p>
+                    <p>Voici une liste non exhaustive de ressources sur lesquelles nos recherches s'appuient</p>
                 </div>
 
                 <h2>Exemples de contenus libres et vectoriels</h2>
                 <ul>
                     <li><a href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E6%89%8B%E8%A9%B1#.E7.94.BB.E5.83.8F.E3.82.92.E7.94.A8.E3.81.84.E3.81.9F.E5.85.B7.E4.BD.93.E4.BE.8B">Dictionnaire japonais à base de photos décalquées</a> (Libre et vectoriel, non schématique)</li>
-                    <li><a href="https://openclipart.org/search/?query=sign+language">Quelques «mains» sur openclipart</a> (Libre et vectoriel, mais aucun mot)</li>
+                    <li><a href="https://openclipart.org/search/?query=sign+language">Quelques « mains » sur openclipart</a> (Libre et vectoriel, mais aucun mot)</li>
                     <li><a href="http://thenounproject.com/term/sign-language/">Quelques icônes sur TheNounProject</a> (Vectoriel et parfois libre, mais aucun mot)</li>
                 </ul>
 
                 <h2>Exemples de contenus non libres et/ou non vectoriels</h2>
 
                 <ul>
-                    <li><a href="http://www.signesdesens.org/produit/jeu-dites-le-en-langue-des-signes/">Jeu de cartes «Dites-le en langue des signes»</a> (Cartes construites sur le principe des éléments réutilisables)</li>
+                    <li><a href="http://www.signesdesens.org/produit/jeu-dites-le-en-langue-des-signes/">Jeu de cartes « Dites-le en langue des signes »</a> (Cartes construites sur le principe des éléments réutilisables)</li>
                     <li><a href="http://www.irit.fr/presto/lexique.html">Lexique LSF informatique (PRESTO)</a> (Libre, non vectoriel, tracé sur photographies)</li>
-                    <li><a href="https://plus.google.com/photos/114393153629658637671/albums/5533136202902298385">Dictionnaire espagnol pour enfants</a> (Non vectoriel, license inconnue)</li>
+                    <li><a href="https://plus.google.com/photos/114393153629658637671/albums/5533136202902298385">Dictionnaire espagnol pour enfants</a> (Non vectoriel, licence inconnue)</li>
                     <li>
                     <a href="https://sites.google.com/site/languesignes/dico">Dictionnaire de dessins numérisés</a> (Flou, faible résolution)</li>
                     <li>
@@ -64,7 +64,7 @@
                     <li>
                     <a href="https://www.babysleepsite.com/baby-sleep-support/baby-sign-language-baby-sleep/">Signes pour bébés</a> (schématique, faible résolution)</li>
                     <li>
-                    <a href="http://theses.univ-lyon2.fr/documents/getpart.php?id=lyon2.1998.abonucci&part=1935">La langue des signes est-elle universelle ?</a> (exemples de tracés sur photographies)</li>
+                    <a href="http://theses.univ-lyon2.fr/documents/getpart.php?id=lyon2.1998.abonucci&part=1935">La langue des signes est-elle universelle ?</a> (exemples de tracés sur photographies)</li>
                     <li>
                     <a href="http://www.ec-la-deymarde.ac-aix-marseille.fr/spip/spip.php?article137">Exemples de supports pour une classe CM2</a> (hétérogènes, très faible résolution)</li>
                     <li>
