--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>LSF Libre - Qui sommes-nous ?</title>
+    <title>Signothèque - Qui sommes-nous ?</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav role="navigation">
-            <h1>LSF Libre</h1>
+            <h1>Signothèque</h1>
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Accueil</a>
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>Une bibliothèque de signes universelle, vectorielle, et libre</h2>
+            <h2>300 langues des signes universelle, vectorielle, et libre</h2>
         </div>
     </header>
 
