--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>LSF Libre</title>
+    <title>Signotheque</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
@@ -44,7 +44,7 @@
                         <div class="circle-icon">
                             <i class="fa fa-creative-commons"></i>
                         </div>
-                        <h2 class="text-center">License libre</h2>
+                        <h2 class="text-center">Licence libre</h2>
                         <p>Les licences d'utilisation des contenus disponibles ne sont pas toujours ouvertes (copyright, utilisation impossible hors site, …).</p>
                         <p>Il est donc très difficile de s'approprier les contenus, et surtout de les améliorer ou de contribuer.</p>
                         <p>Nous souhaitons construire une bibliothèque de signes qui soit dans le domaine public (Creative Commons CC-0).</p>
