--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav role="navigation">
-            <h1>LSF Libre</h1>
+            <h1>Signotheque</h1>
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Accueil</a>
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>Une bibliothèque de signes universelle, vectorielle, et libre</h2>
+            <h2>Une Première Vectothèque Mondiale des Langues des Signes</h2>
         </div>
     </header>
 
