--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>une vectothèque des langues des signes numériques libres</h2>
+            <h2>une 1ère vectothèque des langues des signes, numériques et libres</h2>
         </div>
     </header>
 
