--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>300 langues des signes universelle, vectorielle, et libre</h2>
+            <h2>une première vectotheque universelle, vectorielle et libre</h2>
         </div>
     </header>
 
