--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="why">
             <div class="container">
                 <h1>Pourquoi ?</h1>
-                <p class="intro">Il existe des milliers de sites Web, dictionnaires et bibliothèques en ligne, dédiés aux langues des signes. Pourquoi vouloir recommencer ?</p>
+                <p class="intro">Il existe des milliers de sites Web, dictionnaires et bibliothèques en ligne, dédiés aux Langue des Signes. Pourquoi vouloir recommencer ?</p>
 
                 <div class="row">
 
@@ -44,10 +44,10 @@
                         <div class="circle-icon">
                             <i class="fa fa-creative-commons"></i>
                         </div>
-                        <h2 class="text-center">Licence libre</h2>
+                        <h2 class="text-center">Licence Libre</h2>
                         <p>Les licences d'utilisation des contenus disponibles ne sont pas toujours ouvertes (copyright, utilisation impossible hors site, …).</p>
                         <p>Il est donc très difficile de s'approprier les contenus, et surtout de les améliorer ou de contribuer.</p>
-                        <p>Nous souhaitons construire une bibliothèque de signes qui soit dans le domaine public (Creative Commons CC-0).</p>
+                        <p>Nous souhaitons construire une signothèque qui soit dans le domaine public (Creative Commons CC-0).</p>
                     </div>
 
                     <div class="col-md-4">
