--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <i class="fa fa-globe"></i>
                         </div>
                         <h2 class="text-center">Universelle</h2>
-                        <p>La bibliothèque sera internationale. Chaque lettre, chiffre ou mot pourra être décliné dans différentes langues, selon les envies des contributeurs. Pour commencer, nous nous focaliserons probablement sur la langue des signes française.</p>
+                        <p>La Signothèque sera internationale. Chaque lettre, chiffre ou mot pourra être décliné dans différentes langues des signes, selon les envies des contributeurs. Pour commencer, nous nous focaliserons probablement sur la langue des signes française.</p>
                         <p>Contrairement aux photos, les illustrations produites ne seront pas obligatoirement à l'image des contributeurs. Elles feront preuve de diversité (enfants, femmes, hommes, multiethnique…) et le plus schématique possible (visages, bustes, vêtements…).</p>
                     </div>
 
@@ -66,7 +66,7 @@
                         <h2 class="text-center">Collaborative</h2>
                         <p>Chaque visuel pourra être recherché par mot clé et téléchargé par langue sur une page Web minimaliste.</p>
                         <p>Tout le monde pourra s'approprier, corriger, améliorer et ajouter des signes. La bibliothèque sera donc construite avec l'aide de contributeurs bénévoles. Nous encadrerons le projet avec la même philosophie que les logiciels libres !</p>
-                        <p>La licence libre permettra aussi de publier le contenu de la bibliothèque sur plusieurs plateformes existantes (ex. <a href="https://thenounproject.com/term/sign-language/" title="thenounproject">thenounproject</a>, <a href="https://openclipart.org/search/?query=sign+language" title="openclipart">openclipart</a>).</p>
+                        <p>La Licence Libre permettra aussi de publier le contenu de la bibliothèque sur plusieurs plateformes existantes (ex. <a href="https://thenounproject.com/term/sign-language/" title="thenounproject">thenounproject</a>, <a href="https://openclipart.org/search/?query=sign+language" title="openclipart">openclipart</a>).</p>
                     </div>
 
                     <div class="col-md-12">
@@ -122,7 +122,7 @@
                         <div class="card text-center">
                             <div class="card-block">
                             <h4 class="card-title">Enseignement</h4>
-                            <p class="card-text">Supports d’<strong>apprentissage et d’enseignement des langues signées</strong> (pédagogie à l'école, jeux, cartes-mémo, coloriages, …)</p>
+                            <p class="card-text">Supports d’<strong>apprentissage et d’enseignement des Langues des Signes</strong> (pédagogie à l'école, jeux, cartes-mémo, coloriages, …)</p>
                             </div>
                         </div>
                     </div>
