--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -42,12 +42,12 @@
                     <div class="card">
                         <div class="card-header">
                             <img class="avatar" src="https://avatars1.githubusercontent.com/u/6570734?v=3&s=100" alt="Sj Rideaf">
-                            <h4 class="card-title"><a href="http://www.rideaf.me/" title="http://www.rideaf.me/">Sj Rideaf</a></h4>
-                            <p class="card-text">Sourdéveloppeur d’une plateforme collaborative noétomalalienne</p>
+                            <h4 class="card-title"><a href="http://www.twitter.com/seejayer" title="http://www.twitter.com/seejayer">Sj Rideaf</a></h4>
+                            <p class="card-text">Hacktivisme de la Culture Sourde</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Président de l'association <a href="http://www.arboresign.fr/" title="http://www.arboresign.fr/">Arbore'Sign</a></li>
-                            <li class="list-group-item">Conseiller technique en accessibilité universelle de l'association <a href="http://www.liberte0.org/" title="http://www.liberte0.org/">Liberté0</a></li>
+                            <li class="list-group-item">Porteur du projet Signothèque <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
+                            <li class="list-group-item"> de l'association <a href="http://www.liberte0.org/" title="http://www.liberte0.org/">Liberté0</a></li>
                             <li class="list-group-item">Cinéplasticien numérique de l'association <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
                             <li class="list-group-item">Référent pédagogique LSF de l'association <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Midi-Pyrénées</a> à Ramonville</li>
                         </ul>
