--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>une première vectotheque universelle, vectorielle et libre</h2>
+            <h2>un projet de vectotheque universelle, multilingue dédiés aux Langue des Signes</h2>
         </div>
     </header>
 
