--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -42,8 +42,8 @@
                     <div class="card">
                         <div class="card-header">
                             <img class="avatar" src="https://avatars1.githubusercontent.com/u/6570734?v=3&s=100" alt="Sj Rideaf">
-                            <h4 class="card-title"><a href="http://www.twitter.com/seejayer" title="http://www.twitter.com/seejayer">Sj Rideaf</a></h4>
-                            <p class="card-text">Hacktivisme de la Culture Sourde</p>
+                            <h4 class="card-title"><a href="http://www.github.com/seejayer" title="http://www.github.com/seejayer">Sj Rideaf</a></h4>
+                            <p class="card-text">Hacktiviste de l'accessibilité des hackerspaces</p>
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Porteur du projet Signothèque <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
@@ -66,7 +66,7 @@
                     <div class="card">
                         <div class="card-header">
                             <h4 class="card-title">Sungja Reboul</h4>
-                            <p class="card-text">Membre de l'<a href="http://www.apes-mp.fr/" title="http://www.apes-mp.fr/">Association des Parents d’Enfants Sourds</a> de Midi Pyrénées.</p>
+                            <p class="card-text">fondatrice de l'association Le Facteur Humain à Ramonville-Saint-Agne.</p>
                         </div>
                     </div>
                     <div class="card">
