--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -46,10 +46,10 @@
                             <p class="card-text">Hacktiviste de l'accessibilité des hackerspaces</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Porteur du projet Signothèque <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
-                            <li class="list-group-item"> de l'association <a href="http://www.liberte0.org/" title="http://www.liberte0.org/">Liberté0</a></li>
+                            <li class="list-group-item">Porteur du projet <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
+                            <li class="list-group-item">Trésorier de l'association <a href="http://www.sensdessusdessous.org/" title="http://www.sensdessusdessous.org/">Sens Dessus Dessous</a></li>
                             <li class="list-group-item">Cinéplasticien numérique de l'association <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
-                            <li class="list-group-item">Référent pédagogique LSF de l'association <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Midi-Pyrénées</a> à Ramonville</li>
+                            <li class="list-group-item">Fabmanageur de l'association <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Occitanie</a> au FabLab de Ramonville Saint-Agne</li>
                         </ul>
                     </div>
                     <div class="card">
