--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -43,13 +43,13 @@
                         <div class="card-header">
                             <img class="avatar" src="https://avatars1.githubusercontent.com/u/6570734?v=3&s=100" alt="Sj Rideaf">
                             <h4 class="card-title"><a href="http://www.github.com/seejayer" title="http://www.github.com/seejayer">Sj Rideaf</a></h4>
-                            <p class="card-text">Hacktiviste de l'accessibilité des hackerspaces</p>
+                            <p class="card-text">Mediateur numerique</p>
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Porteur du projet <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
-                            <li class="list-group-item">Trésorier de l'association <a href="http://www.sensdessusdessous.org/" title="http://www.sensdessusdessous.org/">Sens Dessus Dessous</a></li>
-                            <li class="list-group-item">Cinéplasticien numérique de l'association <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
-                            <li class="list-group-item">Fabmanageur de l'association <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Occitanie</a> au FabLab de Ramonville Saint-Agne</li>
+                            <li class="list-group-item">Trésorier de <a href="http://www.sensdessusdessous.org/" title="http://www.sensdessusdessous.org/">Sens Dessus Dessous</a></li>
+                            <li class="list-group-item">Plasticien de <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
+                            <li class="list-group-item">Fabmanageur <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Occitanie</a> au FabLab de Ramonville Saint-Agne</li>
                         </ul>
                     </div>
                     <div class="card">
