--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav role="navigation">
-            <h1>Signotheque</h1>
+            <h1>Signothèque</h1>
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Accueil</a>
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>un projet de vectotheque universelle, multilingue dédiés aux Langue des Signes</h2>
+            <h2>...libre et accessible à tous et toutes</h2>
         </div>
     </header>
 
