--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -49,7 +49,7 @@
                             <li class="list-group-item">Porteur du projet <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
                             <li class="list-group-item">Trésorier de <a href="http://www.sensdessusdessous.org/" title="http://www.sensdessusdessous.org/">Sens Dessus Dessous</a></li>
                             <li class="list-group-item">Plasticien de <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
-                            <li class="list-group-item">Fabmanageur <a href="http://www.planete-sciences.org/midi-pyrenees/web/" title="http://www.planete-sciences.org/midi-pyrenees/web/">Planète Sciences Occitanie</a> au FabLab de Ramonville Saint-Agne</li>
+                            <li class="list-group-item">Fabmanageur <a href="http://www.fablab.fr" title="http://www.fablab.Fr">du Réseau Français des FabLabs</a></li>
                         </ul>
                     </div>
                     <div class="card">
