--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Signothèque - Qui sommes-nous ?</title>
+    <title>Signothèque - Qui sommes-nous ?</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+                    <a class="nav-link active" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="participer.html">Participer</a>
@@ -28,28 +28,28 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>une première vectotheque universelle, vectorielle et libre</h2>
+            <h2></h2>
         </div>
     </header>
 
     <div id="content">
         <section id="who-are-we">
             <div class="container">
-                <h1>Qui sommes-nous ?</h1>
-                <p class="intro">Nous sommes une équipe de gens motivés ayant pour envie commune le partage et l'accessibilité !</p>
+                <h1>Qui sommes-nous ?</h1>
+                <p class="intro">Nous sommes une équipe de gens motivés ayant pour envie commune le partage et l'accessibilité !</p>
 
                 <div class="card-columns">
                     <div class="card">
                         <div class="card-header">
                             <img class="avatar" src="https://avatars1.githubusercontent.com/u/6570734?v=3&s=100" alt="Sj Rideaf">
                             <h4 class="card-title"><a href="http://www.github.com/seejayer" title="http://www.github.com/seejayer">Sj Rideaf</a></h4>
-                            <p class="card-text">Mediateur numerique</p>
+                            <p class="card-text">Sourdéveloppeur</p>
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Porteur du projet <a href="http://www.signotheque.xyz/" title="http://www.signotheque.xyz/">Signothèque</a></li>
                             <li class="list-group-item">Trésorier de <a href="http://www.sensdessusdessous.org/" title="http://www.sensdessusdessous.org/">Sens Dessus Dessous</a></li>
-                            <li class="list-group-item">Plasticien de <a href="http://www.patch-work.fr/" title="http://www.patch-work.fr/">Patch-Work</a> chez <a href="http://mixart-myrys.org/" title="http://mixart-myrys.org/">Mix'Art Myrys</a></li>
-                            <li class="list-group-item">Fabmanageur <a href="http://www.fablab.fr" title="http://www.fablab.Fr">du Réseau Français des FabLabs</a></li>
+                            <li class="list-group-item">Hacker de<a href="http://www.tetalab.org/" title="http://www.tetalab.org"> Tetalab</a></li>
+                            <li class="list-group-item">Maker de<a href="http://www.fablab.fr" title="http://www.fablab.Fr"> Réseau Français des FabLabs</a></li>
                         </ul>
                     </div>
                     <div class="card">
