--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="card text-center">
                             <div class="card-block">
                             <h4 class="card-title">Communication</h4>
-                            <p class="card-text">Permettre <strong>l'accès libre à la langue des signes</strong> pour des personnes dont les proches sont sourds ou malentendants</p>
+                            <p class="card-text">Permettre <strong>l'accès libre à la langue des signes</strong> pour des personnes dont les proches sont sourds ou entendants</p>
                             </div>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
 
                 <div class="container">
                     <h2>Plateforme collaborative</h2>
-                    <p>Nous souhaitons commencer avec une plateforme comme <a href="https://fr.wikipedia.org/wiki/GitHub" title="Github Wikipedia page">Github</a>, pour construire et enrichir la bibliothèque à plusieurs.</p>
+                    <p>Nous souhaitons commencer avec une plateforme comme <a href="https://github.com/signotheque" title="Github Wikipedia page">Github</a>, pour construire et enrichir la bibliothèque à plusieurs.</p>
                     <p>Dans un premier temps, les fichiers seront téléchargés, édités sur le poste de travail avec un logiciel comme <a href="https://inkscape.org/" title="Inskscape website">Inkscape</a>, et les résultats renvoyés sur la plateforme. Nous mettrons à profit notre expérience dans le monde des logiciels libres pour animer et gérer les contributions.</p>
                     <p>À terme, nous pourrons envisager d'avoir une application Web, avec un véritable éditeur en ligne (comme les pour les <a href="http://faceyourmanga.com/" title="Face Your Manga website">avatars mangas</a>…)</p>
                 </div>
