--- a/participer.html
+++ b/participer.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2>Une bibliothèque de signes universelle, vectorielle, et libre</h2>
+            <h2></h2>
         </div>
     </header>
 
@@ -39,18 +39,18 @@
                 <p class="intro"></p>
 
                 <h2>Comment ?</h2>
-                <p>Si vous êtes intéressés pour suivre l'avancement du projet, rejoignez notre mailing-list (en cours de création, en attendant <a href="mailto:signotheque@arboresign.org">vous pouvez nous contacter</a>) !</p>
+                <p>Si vous êtes intéressés pour suivre l'avancement du projet, rejoignez notre mailing-list (en cours de création, en attendant <a href="mailto:contact@signotheque.xyz">vous pouvez nous contacter</a>) !</p>
                 <p>À ce stade du projet, nous sommes surtout à la recherche d'un(e) illustrat(rice/eur) pour concevoir les premiers éléments de base, et donner l'identité graphique !</p>
                 <p>Par la suite, il suffira d'assembler les éléments avec un logiciel de dessin et de soumettre les créations !</p>
-                <p>Si tu es développeur Web et que tu es motivé pour créer une petite application afin de naviguer dans la bibliothèque, rejoins-nous !</p>
+                <p>Si tu es développeur Web et que tu es motivé pour créer une petite application afin de naviguer dans la signothèque, rejoins-nous !</p>
 
                 <h2>Feuille de route</h2>
                 <ul>
                     <li class="crossed">Réfléchir et synthétiser les idées</li>
-                    <li>Communiquer sur le projet</li>
-                    <li>Trouver un(e) illustratrice/eur motivé(e) pour faire les premiers pas</li>
-                    <li>Mettre en ligne le projet</li>
-                    <li>Créer un premier jet d’éléments comprenant l’alphabet, les chiffres et quelques mots simples</li>
+                    <li class="crossed">Communiquer sur le projet</li>
+                    <li class="crossed">Trouver un(e) illustratrice/eur motivé(e) pour faire les premiers pas</li>
+                    <li class="crossed">Mettre en ligne le projet</li>
+                    <li class="crossed">Créer un premier jet d’éléments comprenant l’alphabet, les chiffres et quelques mots simples</li>
                     <li>Créer quelques supports éducatifs pour valider les premiers visuels</li>
                     <li>Animer des ateliers pour apprendre à contribuer des signes</li>
                     <li>Créer une activité GCompris pour apprendre à lire aux malentendants, ou aux entendants à signer !</li>
