--- a/ressources.html
+++ b/ressources.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav role="navigation">
-            <h1>Signothèque</h1>
+            <h1>Open Source Sign Language</h1>
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Accueil</a>
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div id="cover" class="text-center">
-            <h2></h2>
+            <h2>Signothèque</h2>
         </div>
     </header>
 
